Prefer ArrayDeque over ArrayList for performance reasons.